fix: fp-546, fix .icon-nav all directions anywhere
The fp-546 original fix for icon-nav-left being cut off was isolated.

This fix works for all icon nav directions in any button in the Portal.

Also:
- I tried to make the margin exception in c-button--new.css.﹡
- But I do not know how to do it AND let Button.module.css read it.
- So I made the change in Button.module.css.
- I must replicate the new code in tup-ui.

﹡Because that is the source file with the original margin CSS.

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
@@ -16,10 +16,6 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.link button i {
-  /* margin needed on _common button icon to prevent cutoff */
-  margin-left: 0.5em;
-}
 .link-icon {
   --color: var(--global-color-accent--normal);
 }
